2009-10-06  Anton Muhin  <antonm@chromium>

Reviewed by Dimitri Glazkov.

        Non standard, but popular exetension allows automagically
        turn a function into a namespace resolver.  Support that in
        Chromium as well.

        This adds new layout tests.
        https://bugs.webkit.org/show_bug.cgi?id=30128

        * fast/xpath/xpath-namespaces-expected.txt:
        * fast/xpath/xpath-namespaces.html:
2009-10-06  Anton Muhin  <antonm@chromium>

        Reviewed by Dimitri Glazkov.

        Non standard, but popular exetension allows automagically
        turn a function into a namespace resolver.  Support that in
        Chromium as well.

        Adjust CodeGeneratorV8 to treat XPathNSResolver in a special way.
        https://bugs.webkit.org/show_bug.cgi?id=30128

        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/V8DOMWrapper.h:
        (WebCore::V8DOMWrapper::getXPathNSResolver):
        * bindings/v8/custom/V8DocumentCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):

Canonical link: https://commits.webkit.org/40750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49191 268f45cc-cd09-0410-ab3c-d52691b4dbfc